# streamzeug

./: Makefile  README.md  example.yaml  go.mod  go.sum  meson.build  streamzeug.service.in  streamzeug_files.sh
cmd/streamzeug/: config.go  http.go  parsearg.go  streamzeug.go
config/: config.go  flow.go  influxdb.go  input.go  output.go  validatehelpers.go
dektec/: asi.cpp  asi.h
flow/: create.go  flow.go  input.go  output.go  updateconfig.go
include_srt/srt/: hack.md
input/: input.go
input/rist/: rist.go
logging/: logging.go
mainloop/: mainloop.go  output.go  status.go
output/: output.go
output/dektecasi/: dektecasi.go  dektecasi_logging.go  dektecasi_logging_c.go
output/dektecasi/dtstats/: stats.go
output/rist/: rist.go
output/srt/: srt.go
output/udp/: udp.go
stats/: influxdb.go  stats.go
subprojects/: librist.wrap  libsrt.wrap
vectorio/: vectorio.go
version/: version.go
